current/forums/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forums-service
  labels:
    app: forums
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: forums
